# ToyFullTextSearchEngine

./: .gitignore  CMakeLists.txt  Document.cpp  Document.h  README.md  SearchEngine.cpp  SearchEngine.h  TextAnalyzer.cpp  TextAnalyzer.h  main.cpp
resource/: enwiki-latest-abstract1.xml
